# Phi-Recorder

./: README.md  icon.py  index.html  package.json  pnpm-lock.yaml
.github/workflows/: debug.yaml  release.yaml  tauri.yaml
src/: AboutView.vue  App.vue  RPEView.vue  RenderView.vue  RenderView1.vue  TasksView.vue  common.ts  main.ts  model.ts  theme.ts
src-tauri/: Cargo.toml  config.toml  config.yml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: cmd.rs  common.rs  icon.rs  main.rs  preview.rs  render.rs  task.rs
src/assets/: main.css
src/components/: ConfigView.vue  TipSwitch.vue  TipTextField.vue
src/router/: index.ts
