[package]
name = "phi-recorder"
version = "0.3.1"
description = "Phi Recorder"
authors = ["HLMC", "Mivik"]
license = ""
repository = ""
default-run = "phi-recorder"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
# env_logger = "0.11.6"
serde_json = "1.0.138"
toml = "0.7.3"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "1.8.2", features = [ "os-all", "http-all", "dialog-message", "system-tray", "shell-open", "fs-read-file", "protocol-asset", "dialog-open"] }

anyhow = { version = "1.0.95", features = ["backtrace"] }
macroquad = { git = "https://github.com/2278535805/prpr-macroquad", default-features = false }
prpr = { git = "https://github.com/2278535805/render-lib", package = "prpr", branch = "render-lib" }
# prpr = { path = "../../phira/prpr" }

sasa = { git = "https://github.com/2278535805/sasa" }
tokio = { version = "1.43.0", features = ["process", "rt-multi-thread", "fs"] }
tracing = "0.1.37"
tempfile = "3.16.0"
chrono = "0.4.28"
open = "5.3.2"
fs4 = { version = "0.6.6", features = ["tokio-async"] }
winapi = {version = "0.3", features = ["wincon", "winuser"] }
libloading = { version = "0.8.6" }
# sysinfo = "0.29.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
# debug = 1

[profile.dev.package."*"]
opt-level = 2
